updating swagger documentation
