# app/Http/Controllers/Api/Auth/AuthController.php
@@ -74,7 +74,15 @@ class AuthController extends Controller
      *             @OA\Property(property="name", type="string", example="John Doe"),
      *             @OA\Property(property="email", type="string", example="user@example.com"),
      *             @OA\Property(property="created_at", type="string", format="date-time", example="2021-01-01T00:00:00.000000Z"),
-     *             @OA\Property(property="updated_at", type="string", format="date-time", example="2021-01-01T00:00:00.000000Z")
+     *             @OA\Property(property="updated_at", type="string", format="date-time", example="2021-01-01T00:00:00.000000Z"),
+     *             @OA\Property(
+     *                 property="merchant",
+     *                 type="object",
+     *                 @OA\Property(property="id", type="integer", example=1),
+     *                 @OA\Property(property="balance", type="number", format="float", example=1000.50),
+     *                 @OA\Property(property="created_at", type="string", format="date-time", example="2021-01-01T00:00:00.000000Z"),
+     *                 @OA\Property(property="updated_at", type="string", format="date-time", example="2021-01-01T00:00:00.000000Z")
+     *             )
      *         )
      *     ),
      *     @OA\Response(
